[#355] Implemenet iOS fixes for skip link and back to top. - Added platform utility to detect iOS. - Updated skip link to use platform utility. Will not show focus effect on iOS (this allows VoiceOver to skip properly) - Added skip-to-target utility to provide JS focus for skip links. - Updated back-to-top to use skip-to-target to JS focus it's way to the target. - Added back-to-top style fix on iOS to ensure it's round and not a rounded-square on iPhone.

--- a/components/03-organisms/skip-link/skip-link.scss
+++ b/components/03-organisms/skip-link/skip-link.scss
@@ -8,6 +8,18 @@
   &__link {
     display: inline-block;
     margin: ct-spacing(2) ct-spacing(3);
+
+    &:not([data-platform="ios"]) {
+      &:active,
+      &:focus-visible,
+      &:hover {
+        position: static !important;
+        overflow: visible;
+        clip: auto;
+        width: auto !important;
+        height: auto !important;
+      }
+    }
   }
 
   @include ct-component-theme($root) using($root, $theme) {
